--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprenda Libras: Comidas</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>🍏 Libras: Comidas</h1>
@@ -15,7 +17,7 @@
             <a href="#quiz">Quiz</a>
         </nav>
 
-    </header>>
+    </header>
     <!-- Categorias -->
     <div class="categorias-menu">
         <button class="categoria-btn" data-categoria="0">Frutas</button>
@@ -56,8 +58,20 @@
         <div id="qrcode"></div>
     </div>
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
     <script src="assets/data.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
